--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>KINGDOMKEY - Tournament</title>
-        <!-- css -->
+        <!-- css  prueba-->
         
         <link rel="stylesheet" href="assets/css/app.css" />
     </head>
