creacion-tables: diseno basico

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>KINGDOMKEY - Tournament</title>
-        <!-- css  prueba-->
-        
+        <!-- css -->
         <link rel="stylesheet" href="assets/css/app.css" />
+        <link rel="stylesheet" href="assets/css/widgets.css" />
     </head>
     <header class="sticky-header">
         <div class="nav-secondary">
@@ -52,7 +52,6 @@
             </div>
         </div>
         <div class="app">
-            
             <div class="content">
                 <div class="nav-horizontal">
                     <nav>
@@ -64,12 +63,11 @@
                         </ul>
                     </nav>
                     <div class="nav-data">
-                        <p>tambien ingresó como
-                            texto de relleno en documentos</p>
+                        <p>tambien ingresó como texto de relleno en documentos</p>
                     </div>
                 </div>
                 <h1>Noticias</h1>
-                <div class="cards">'
+                <div class="cards">
                     <div class="card w-5">
                         <div class="card-top">
                             <div class="card-date">
@@ -172,9 +170,83 @@
                             </div>
                         </div>
                     </div>
+                    <div class="card w-10">
+                        <div class="matches">
+                            <table>
+                                <caption>Agosto 23</caption>
+                                <thead>
+                                    <tr>
+                                        <!-- th -->
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td> <a href="#">T1</a></td>
+                                        <td>vs</td>
+                                        <td> <a href="#">Gen G</a></td>
+                                        <td>3-0</td>
+                                        <td><a href="">Resumen</a></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="sidebar"></div>
+            <div class="sidebar">
+                <div class="widgets">
+                    <div class="widget">
+                        <div class="widget-top">
+                            <h2>Musica para jugar</h2>
+                        </div>
+                        <div class="widget-bottom">
+                            <iframe
+                                style="border-radius: 12px"
+                                src="https://open.spotify.com/embed/playlist/7C8fab45Kvs0FHIrHqn8GX?utm_source=generator&theme=0"
+                                width="100%"
+                                height="352"
+                                frameborder="0"
+                                allowfullscreen=""
+                                allow="autoplay; clipboard-write;
+                                encrypted-media; fullscreen; picture-in-picture"
+                                loading="lazy"></iframe>
+                        </div>
+                    </div>
+                    <div class="widget">
+                        <div class="widget-top">
+                            <h2>Proximo encuentro</h2>
+                        </div>
+                        <div class="widget-bottom">
+                            <div class="matches">
+                                <table>
+                                    <caption>Agosto 23</caption>
+                                    <thead>
+                                        <tr>
+                                            <!-- th -->
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td> <a href="#">T1</a></td>
+                                            <td>vs</td>
+                                            <td> <a href="#">Gen G</a></td>
+                                            <td>3 - 0</td>
+                                            <td><a href="">Resumen</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td> <a href="#">T1</a></td>
+                                            <td>vs</td>
+                                            <td> <a href="#">Gen G</a></td>
+                                            <td>3 - 0</td>
+                                            <td><a href="">Resumen</a></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <footer></footer>
     </body>
