create-card-create: creacion de botton y texto para crear toneos en home

--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
                     <li><a href="#">Registrarse</a></li>
                 </ul>
             </div>
-        </div>
-        <div class="nav-primary">
             <div class="social">
                 <div class="nav-social">
                     <ul>
@@ -28,6 +26,8 @@
                     </ul>
                 </div>
             </div>
+        </div>
+        <div class="nav-primary">
             <div class="logo">
                 <img src="assets/images/logo.png" alt="Logo-principal" />
             </div>
@@ -66,7 +66,17 @@
                         <p>tambien ingresó como texto de relleno en documentos</p>
                     </div>
                 </div>
-                <h1>Noticias</h1>
+                <div class="cards">
+                    <div class="card w-10">
+                        <div class="card-top">
+                            <h4>Que comience la batalla</h4>
+                        </div>
+                        <div class="card-bottom flex-center m-2">
+                            <a class="btn btn-secondary " href="#">Crear Torneo</a>
+                        </div>
+                    </div>
+                </div>
+                <h1>Tournament</h1>
                 <div class="cards">
                     <div class="card w-5">
                         <div class="card-top">
@@ -184,7 +194,21 @@
                                         <td> <a href="#">T1</a></td>
                                         <td>vs</td>
                                         <td> <a href="#">Gen G</a></td>
-                                        <td>3-0</td>
+                                        <td>3 - 0</td>
+                                        <td><a href="">Resumen</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td> <a href="#">JDG</a></td>
+                                        <td>vs</td>
+                                        <td> <a href="#">MAD</a></td>
+                                        <td>3 - 0</td>
+                                        <td><a href="">Resumen</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td> <a href="#">Fnatic</a></td>
+                                        <td>vs</td>
+                                        <td> <a href="#">G2</a></td>
+                                        <td>3 - 0</td>
                                         <td><a href="">Resumen</a></td>
                                     </tr>
                                 </tbody>
@@ -234,15 +258,90 @@
                                             <td><a href="">Resumen</a></td>
                                         </tr>
                                         <tr>
-                                            <td> <a href="#">T1</a></td>
+                                            <td> <a href="#">JDG</a></td>
                                             <td>vs</td>
-                                            <td> <a href="#">Gen G</a></td>
+                                            <td> <a href="#">MAD</a></td>
+                                            <td>3 - 0</td>
+                                            <td><a href="">Resumen</a></td>
+                                        </tr>
+                                        <tr>
+                                            <td> <a href="#">Fnatic</a></td>
+                                            <td>vs</td>
+                                            <td> <a href="#">G2</a></td>
                                             <td>3 - 0</td>
                                             <td><a href="">Resumen</a></td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
+                        </div>
+                    </div>
+                    <div class="widget">
+                        <div class="widget-top">
+                            <h2>Ultimas publiciones</h2>
+                        </div>
+                        <div class="widget-bottom">
+                                <div class="cards">
+                                    <div class="card w-10">
+                                        <div class="card-top">
+                                            <div class="card-date">
+                                                <p>01-01-2023</p>
+                                            </div>
+                                            <h3>
+                                                <a href="#">Liga CS:Go vo3</a>
+                                            </h3>
+                                        </div>
+                                        <div class="card-bottom">
+                                            <div class="card-img">
+                                                <img src="assets/images/post/img-1.jpg"
+                                                    alt="Publicación" />
+                                            </div>
+                                            <div class="card-detail">
+                                                <div class="card-text">
+                                                    <p>
+                                                        Lorem Ipsum es simplemente el texto de
+                                                        relleno de las
+                                                        imprentas y archivos de texto. Lorem
+                                                        Ipsum ha sido el texto
+                                                        de relleno estándar de las industrias                                       
+                                                    </p>
+                                                </div>
+                                                <div class="card-btn">
+                                                    <a href="#" class="btn btn-primary">Ver más</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card w-10">
+                                        <div class="card-top">
+                                            <div class="card-date">
+                                                <p>01-01-2023</p>
+                                            </div>
+                                            <h3>
+                                                <a href="#">fifa23 cup 16</a>
+                                            </h3>
+                                        </div>
+                                        <div class="card-bottom">
+                                            <div class="card-img">
+                                                <img src="assets/images/post/img-2.jpg"
+                                                    alt="Publicación" />
+                                            </div>
+                                            <div class="card-detail">
+                                                <div class="card-text">
+                                                    <p>
+                                                        Lorem Ipsum es simplemente el texto de
+                                                        relleno de las
+                                                        imprentas y archivos de texto. Lorem
+                                                    
+                                                    </p>
+                                                </div>
+                                                <div class="card-btn">
+                                                    <a href="#" class="btn btn-primary">Ver más</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
