--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <li><a href="#">LoL</a></li>
                             <li><a href="#">CS:GO</a></li>
                             <li><a href="#">CS:2</a></li>
-                            <li><a href="#">VALORANT</a></li>
+                            <li><a href="#">Valorant</a></li>
                         </ul>
                     </nav>
                     <div class="nav-data">
@@ -101,26 +101,6 @@
                                         Ipsum ha sido el texto
                                         de relleno estándar de las industrias
                                         desde el año 1500,
-                                        cuando un impresor (N. del T. persona
-                                        que se dedica a la
-                                        imprenta) desconocido usó una galería de
-                                        textos y los mezcló
-                                        de tal manera que logró hacer un libro
-                                        de textos especimen.
-                                        No sólo sobrevivió 500 años, sino que
-                                        tambien ingresó como
-                                        texto de relleno en documentos
-                                        electrónicos, quedando
-                                        esencialmente igual al original. Fue
-                                        popularizado en los 60s
-                                        con la creación de las hojas "Letraset",
-                                        las cuales
-                                        contenian pasajes de Lorem Ipsum, y más
-                                        recientemente con
-                                        software de autoedición, como por
-                                        ejemplo Aldus PageMaker,
-                                        el cual incluye versiones de Lorem
-                                        Ipsum.
                                     </p>
                                 </div>
                                 <div class="card-btn">
@@ -152,26 +132,6 @@
                                         Ipsum ha sido el texto
                                         de relleno estándar de las industrias
                                         desde el año 1500,
-                                        cuando un impresor (N. del T. persona
-                                        que se dedica a la
-                                        imprenta) desconocido usó una galería de
-                                        textos y los mezcló
-                                        de tal manera que logró hacer un libro
-                                        de textos especimen.
-                                        No sólo sobrevivió 500 años, sino que
-                                        tambien ingresó como
-                                        texto de relleno en documentos
-                                        electrónicos, quedando
-                                        esencialmente igual al original. Fue
-                                        popularizado en los 60s
-                                        con la creación de las hojas "Letraset",
-                                        las cuales
-                                        contenian pasajes de Lorem Ipsum, y más
-                                        recientemente con
-                                        software de autoedición, como por
-                                        ejemplo Aldus PageMaker,
-                                        el cual incluye versiones de Lorem
-                                        Ipsum.
                                     </p>
                                 </div>
                                 <div class="card-btn">
