creacion-responsive: gran adaptacion de responsive

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="logo">
                 <img src="assets/images/logo.png" alt="Logo-principal" />
             </div>
-            <nav>
+            <nav class="nav-p">
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Competiciones</a></li>
@@ -52,8 +52,8 @@
             </div>
         </div>
         <div class="app">
-            <div class="content">
-                <div class="nav-horizontal">
+            <div class="content blur-10  ">
+                <div class="nav-horizontal bg-color-white">
                     <nav>
                         <ul>
                             <li><a href="#">LoL</a></li>
@@ -66,8 +66,8 @@
                         <p>tambien ingresó como texto de relleno en documentos</p>
                     </div>
                 </div>
-                <div class="cards">
-                    <div class="card w-10">
+                <div class="cards bg-color-1 ">
+                    <div class="card w-10 ">
                         <div class="card-top">
                             <h4>Que comience la batalla</h4>
                         </div>
@@ -77,8 +77,8 @@
                     </div>
                 </div>
                 <h1>Tournament</h1>
-                <div class="cards">
-                    <div class="card w-5">
+                <div class="cards ">
+                    <div class="card w-5 bg-color-2">
                         <div class="card-top">
                             <div class="card-date">
                                 <p>01-01-2023</p>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card w-5">
+                    <div class="card w-5 bg-color-4">
                         <div class="card-top">
                             <div class="card-date">
                                 <p>01-01-2023</p>
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card w-10">
+                    <div class="card w-10 bg-color-2">
                         <div class="matches">
                             <table>
                                 <caption>Agosto 23</caption>
@@ -177,7 +177,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sidebar">
+            <div class="sidebar blur-8 bg-color-3">
                 <div class="widgets">
                     <div class="widget">
                         <div class="widget-top">
