creacion-responsive: gran adaptacion de responsive v4

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="assets/css/app.css" />
         <link rel="stylesheet" href="assets/css/widgets.css" />
     </head>
-    <header class="sticky-header">
+    <header >
         <div class="nav-secondary">
             <div class="auth">
                 <ul>
