creacion-responsive: avance diseño profile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="assets/css/app.css" />
         <link rel="stylesheet" href="assets/css/widgets.css" />
     </head>
-    <header >
+    <header 1>
         <div class="nav-secondary">
             <div class="auth">
                 <ul>
@@ -33,10 +33,10 @@
             </div>
             <nav class="nav-p">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="#">Competiciones</a></li>
                     <li><a href="#">Equipos</a></li>
-                    <li><a href="#">Jugadores</a></li>
+                    <li><a href="profile.html">Jugadores</a></li>
                     <li><a href="#">Foro</a></li>
                 </ul>
             </nav>
