creacion-responsive: avance diseño profile v2 mejoras responsive

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="app">
-            <div class="content blur-10  ">
+            <div class="content blur-10 mr-1 ">
                 <div class="nav-horizontal bg-color-white">
                     <nav>
                         <ul>
@@ -181,7 +181,7 @@
                 <div class="widgets">
                     <div class="widget">
                         <div class="widget-top">
-                            <h2>Musica para jugar</h2>
+                            <h2 class="border-l-1">Musica para jugar</h2>
                         </div>
                         <div class="widget-bottom">
                             <iframe
@@ -198,7 +198,7 @@
                     </div>
                     <div class="widget">
                         <div class="widget-top">
-                            <h2>Proximo encuentro</h2>
+                            <h2 class="border-l-1">Proximo encuentro</h2>
                         </div>
                         <div class="widget-bottom">
                             <div class="matches">
@@ -238,7 +238,7 @@
                     </div>
                     <div class="widget">
                         <div class="widget-top">
-                            <h2>Ultimas publiciones</h2>
+                            <h2 class="border-l-1">Ultimas publiciones</h2>
                         </div>
                         <div class="widget-bottom">
                                 <div class="cards">
