--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
     </header>
     <body>
         <div class="app">
-            <div class="content blur-9 w-10 m-5" style="min-height: 5rem;">
+            <div class="content blur-9 w-10 mt-5">
                 <div class="profile blur-7 bg-color-3">
                     <div class="profile-top">
                         <div class="profile-img">
@@ -71,8 +71,75 @@
                                 <li><a href="#">Youtube</a></li>
                             </ul>
                         </div>
+                        
                     </div>
                 </div>
+            </div>
+            <div class="content  w-10 mt-1">
+                <div class="cards">
+                    <div class="card w-10 blur-8 bg-color-3 br-5">
+                        <div class="card-top ">
+                            <h2 class="border-l-1">Torneos Activos</h2>
+                        </div>
+                        <div class="card-bottom flex-row">
+                            <div class="card w-2 bg-color-2 br-5 p-1 ">
+                                <div class="card-top flex-center">
+                                    <h5>CS:GO vo5</h5>
+                                </div>
+                                <div class="card-bottom"></div>
+                            </div>
+                            <div class="card w-2 bg-color-2 br-5 p-1 ">
+                                <div class="card-top flex-center">
+                                    <h5>CS:GO vo5</h5>
+                                </div>
+                                <div class="card-bottom"></div>
+                            </div>
+                            <div class="card w-2 bg-color-2 br-5 p-1 ">
+                                <div class="card-top flex-center">
+                                    <h5>CS:GO vo5</h5>
+                                </div>
+                                <div class="card-bottom"></div>
+                            </div>
+                            <div class="card w-2 bg-color-2 br-5 p-1 ">
+                                <div class="card-top flex-center">
+                                    <h5>CS:GO vo5</h5>
+                                </div>
+                                <div class="card-bottom"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card w-10 blur-8 bg-color-3 mt-5 br-5">
+                        <div class="card-top ">
+                            <h2 class="border-l-1">Torneos Jugados</h2>
+                        </div>
+                        <div class="card-bottom flex-row">
+                            <div class="card w-2 bg-color-4 br-5 p-1 ">
+                                <div class="card-top flex-center">
+                                    <h5>CS:GO vo5</h5>
+                                </div>
+                                <div class="card-bottom"></div>
+                            </div>
+                            <div class="card w-2 bg-color-4 br-5 p-1 ">
+                                <div class="card-top flex-center">
+                                    <h5>CS:GO vo5</h5>
+                                </div>
+                                <div class="card-bottom"></div>
+                            </div>
+                            <div class="card w-2 bg-color-4 br-5 p-1 ">
+                                <div class="card-top flex-center">
+                                    <h5>CS:GO vo5</h5>
+                                </div>
+                                <div class="card-bottom"></div>
+                            </div>
+                            <div class="card w-2 bg-color-4 br-5 p-1 ">
+                                <div class="card-top flex-center">
+                                    <h5>CS:GO vo5</h5>
+                                </div>
+                                <div class="card-bottom"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
             </div>
         </div>
         <footer></footer>
