creacion-responsive: avance diseño profile v2 mejoras responsive v3

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <h1>Tournament</h1>
                 <div class="cards ">
-                    <div class="card w-5 bg-color-2">
+                    <div class="card w-5 ">
                         <div class="card-top">
                             <div class="card-date">
                                 <p>01-01-2023</p>
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card w-5 bg-color-4">
+                    <div class="card w-5 ">
                         <div class="card-top">
                             <div class="card-date">
                                 <p>01-01-2023</p>
