creacion-responsive: cambios responsives v5

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <nav>
                         <ul>
                             <li><a href="#">LoL</a></li>
-                            <li><a href="#">CS:GO</a></li>
+                            <li><a href="#">FIFA 23</a></li>
                             <li><a href="#">CS:2</a></li>
                             <li><a href="#">Valorant</a></li>
                         </ul>
