creacion-responsive: vista, login register

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="nav-secondary">
             <div class="auth">
                 <ul>
-                    <li><a href="#">Iniciar Sesion</a></li>
-                    <li><a href="#">Registrarse</a></li>
+                    <li><a href="login.html">Iniciar Sesion</a></li>
+                    <li><a href="login.html">Registrarse</a></li>
                 </ul>
             </div>
             <div class="social">
@@ -194,6 +194,27 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    <tr>
+                                        <td> <a href="#">T1</a></td>
+                                        <td>vs</td>
+                                        <td> <a href="#">Gen G</a></td>
+                                        <td>3 - 0</td>
+                                        <td><a href="">Resumen</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td> <a href="#">JDG</a></td>
+                                        <td>vs</td>
+                                        <td> <a href="#">MAD</a></td>
+                                        <td>3 - 0</td>
+                                        <td><a href="">Resumen</a></td>
+                                    </tr>
+                                    <tr>
+                                        <td> <a href="#">Fnatic</a></td>
+                                        <td>vs</td>
+                                        <td> <a href="#">G2</a></td>
+                                        <td>3 - 0</td>
+                                        <td><a href="">Resumen</a></td>
+                                    </tr>
                                     <tr>
                                         <td> <a href="#">T1</a></td>
                                         <td>vs</td>
