--- a/profile.html
+++ b/profile.html
@@ -13,8 +13,8 @@
         <div class="nav-secondary">
             <div class="auth">
                 <ul>
-                    <li><a href="#">Iniciar Sesion</a></li>
-                    <li><a href="#">Registrarse</a></li>
+                    <li><a href="login.html">Iniciar Sesion</a></li>
+                    <li><a href="login.html">Registrarse</a></li>
                 </ul>
             </div>
             <div class="social">
@@ -50,10 +50,10 @@
                         <div class="profile-img">
                             <img src="assets/images/profile/img.jpg" alt="Imagen de perfil">
                         </div>
-                        <div class="profile-player blur-8 bg-color-2">
+                        <div class="profile-player blur-8 bg-color-1">
                             <div class="profile-data">
                                 <h2>staltH</h2>
-                                <h3>Miembro desde 2017</h3>
+                                <h3>Miembro desde 2023</h3>
                             </div>
                         </div>
                     </div>
@@ -71,13 +71,12 @@
                                 <li><a href="#">Youtube</a></li>
                             </ul>
                         </div>
-                        
                     </div>
                 </div>
             </div>
             <div class="content  w-10 mt-1">
                 <div class="cards">
-                    <div class="card w-10 blur-8 bg-color-3 br-5">
+                    <div class="card w-10 blur-8 bg-color-1 br-5">
                         <div class="card-top ">
                             <h2 class="border-l-1">Torneos Activos</h2>
                         </div>
@@ -108,37 +107,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card w-10 blur-8 bg-color-3 mt-5 br-5">
-                        <div class="card-top ">
-                            <h2 class="border-l-1">Torneos Jugados</h2>
-                        </div>
-                        <div class="card-bottom flex-row">
-                            <div class="card w-2 bg-color-4 br-5 p-1 ">
-                                <div class="card-top flex-center">
-                                    <h5>CS:GO vo5</h5>
-                                </div>
-                                <div class="card-bottom"></div>
-                            </div>
-                            <div class="card w-2 bg-color-4 br-5 p-1 ">
-                                <div class="card-top flex-center">
-                                    <h5>CS:GO vo5</h5>
-                                </div>
-                                <div class="card-bottom"></div>
-                            </div>
-                            <div class="card w-2 bg-color-4 br-5 p-1 ">
-                                <div class="card-top flex-center">
-                                    <h5>CS:GO vo5</h5>
-                                </div>
-                                <div class="card-bottom"></div>
-                            </div>
-                            <div class="card w-2 bg-color-4 br-5 p-1 ">
-                                <div class="card-top flex-center">
-                                    <h5>CS:GO vo5</h5>
-                                </div>
-                                <div class="card-bottom"></div>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div> 
             </div>
         </div>
