creacion-responsive: ajustes diseno

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="assets/css/app.css" />
         <link rel="stylesheet" href="assets/css/widgets.css" />
     </head>
-    <header 1>
+    <header class="">
         <div class="nav-secondary">
             <div class="auth">
                 <ul>
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <div class="nav-primary">
+        <div class="nav-primary ">
             <div class="logo">
                 <img src="assets/images/logo.png" alt="Logo-principal" />
             </div>
